test/e2e/testdata/tlsroute-with-dynamic-resolver-backend.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-with-dynamic-resolver-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    sectionName: tls
  hostnames:
  - "tls-dfp-backend.gateway-conformance-infra.svc.cluster.local"
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-dynamic-resolver
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-dynamic-resolver
  namespace: gateway-conformance-infra
spec:
  type: DynamicResolver
---
# Self-signed certificate valid for the backend in-cluster FQDN. As this is a TLS passthrough route,
# the client validates the backend certificate directly, so the certificate SAN must match the SNI
# used to route (and to dynamically resolve the upstream).
# openssl req -x509 -sha256 -nodes -days 36500 -newkey rsa:2048 \
#   -subj '/O=example organization/CN=tls-dfp-backend' \
#   -addext 'subjectAltName=DNS:tls-dfp-backend,DNS:tls-dfp-backend.gateway-conformance-infra,DNS:tls-dfp-backend.gateway-conformance-infra.svc.cluster.local' \
#   -keyout tls.key -out tls.crt
apiVersion: v1
kind: Secret
metadata:
  name: tls-dfp-backend-cert
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQzRENDQXNTZ0F3SUJBZ0lVVHQ1V003VjI0SG9yVU9qcy9hTUIrUE5TNndJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd09URWRNQnNHQTFVRUNnd1VaWGhoYlhCc1pTQnZjbWRoYm1sNllYUnBiMjR4R0RBV0JnTlZCQU1NRDNScwpjeTFrWm5BdFltRmphMlZ1WkRBZ0Z3MHlOakEyTURreU1URXlOVEJhR0E4eU1USTJNRFV4TmpJeE1USTFNRm93Ck9URWRNQnNHQTFVRUNnd1VaWGhoYlhCc1pTQnZjbWRoYm1sNllYUnBiMjR4R0RBV0JnTlZCQU1NRDNSc2N5MWsKWm5BdFltRmphMlZ1WkRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTW5MTjJrOQpqR3F5SlA4WDkxK3I1a [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRREp5emRwUFl4cXNpVC8KRi9kZnErWVV2VG9XRWdHR3JxcTFrZ2NHRTdPYll0TUVyak1pQ2dCcFpSMTE3NzUzN1BBcGY2Y002OFpxSXMyNgpWR1lFOC9ZWUx1V09hTWRtNkw3NkhzUEhPWm1nVnoydS9heExSamZUcWtaWi8wbkhMZmZEVDI5MFB3YXU0YTNjCkl5S3R4ZkVqeDJBY2kwUVlQL1FPNncxTFpSVW1MRmw5N0ZPaFZ3aWdnbnhCL1BONGk5ejZzVEVlZTJUQm9HeVkKRUJaVTI1eVFQNFV0ZTREWk9MeXhZdlJiTFF0NXl5WXl0enYxVVNEU2pFaVJrak9rTnV0NjBvaWZvVld5N0twSApxZG9jaTBRSE5KTTgwR [...]
---
apiVersion: v1
kind: Service
metadata:
  name: tls-dfp-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tls-dfp-backend
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-dfp-backend
  namespace: gateway-conformance-infra
  labels:
    app: tls-dfp-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-dfp-backend
  template:
    metadata:
      labels:
        app: tls-dfp-backend
    spec:
      containers:
      - name: tls-backend
        image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
        volumeMounts:
        - name: secret-volume
          mountPath: /etc/secret-volume
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: SERVICE_NAME
          value: tls-dfp-backend
        - name: TLS_SERVER_CERT
          value: /etc/secret-volume/crt
        - name: TLS_SERVER_PRIVKEY
          value: /etc/secret-volume/key
        resources:
          requests:
            cpu: 10m
      volumes:
      - name: secret-volume
        secret:
          secretName: tls-dfp-backend-cert
          items:
          - key: tls.crt
            path: crt
          - key: tls.key
            path: key
